--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -40,6 +40,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://kit.fontawesome.com/1c407b098e.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/4e48c8b0fc.js" crossorigin="anonymous"></script>
   </body>
 
 </html>
